examples/invalid/07_payloadless_variant_call.lane
// invalid: payloadless variants are values, not zero-argument calls
enum Option[A] {
  none
  some(A)
}

let value : Option[Int] = Option::none()

